@@ -214,7 +214,7 @@ In early stages of development.
 </ul>
 
 <ul>
-<li><a href="http://perso.club-internet.fr/gmaulino/softs.htm">Xcave</a>
+<li><a href="http://xcave.free.fr">Xcave</a>
 - a wine manager for linux users.
 </ul>
 
