@@ -167,6 +167,21 @@ Oct&nbsp;1&nbsp;2002
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+May&nbsp;1&nbsp;2002
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Another Glade port to Windows!</B>
+<P>
+Ishan Chattopadhyaya has created another Glade port to Windows. Source
+code generation should be available in this one.
+You can find it at <a href="http://wingtk.sourceforge.net/">http://wingtk.sourceforge.net/</a>.
+</font></td></tr>
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Mar&nbsp;12&nbsp;2002
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
