@@ -1,3 +1,9 @@
+2002-05-01  Damon Chaplin  <damon@ximian.com>
+
+	* index.html: added link to Ishan's Glade port.
+
+	* apps.html: updated xcave link. Oops, forgot to commit before.
+
 2002-04-02  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added Knocker.
